force-app/main/default/objects/Contact/fields/Account_Industry_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry_Info__c</fullName>
    <formula>TEXT(Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Industry Info</label>
    <type>Text</type>
</CustomField>