force-app/main/default/objects/Contact/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <formula>IF(NOT(ISBLANK( Phone )), &quot;Phone&quot;, IF(NOT(ISBLANK(Email)),&quot;Email&quot;,&quot;None&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Contact Method</label>
    <type>Text</type>
</CustomField>